--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -4,104 +4,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Carrito</title>
+
+  <!-- Bootstrap + Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Tu CSS personalizado -->
+  <link rel="stylesheet" href="../css/principal.css">
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div>
+        <a href="principal.html" class="btn btn-outline-dark">
+          <i class="bi bi-arrow-left"></i> Volver
+        </a>
+      </div>
+      <div class="d-flex align-items-center text-center">
+        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="me-2">
+        <span class="navbar-brand mb-0 h1">ESMIRLO FC</span>
+      </div>
+      <div class="d-flex align-items-center">
+        <a class="nav-link me-3 position-relative text-dark" href="carrito.html">
+          <i class="bi bi-cart fs-5"></i>
+          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">
+            0
+          </span>
+        </a>
+        <a class="nav-link text-dark fs-5" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">
+          📍
+        </a>
+      </div>
+    </div>
+  </nav>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="../css/principal.css">
-    <title>Document</title>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-
-    <!-- IZQUIERDA: Botón Volver -->
-    <div>
-      <a href="principal.html" class="btn btn-outline-dark">
-        <i class="bi bi-arrow-left"></i> Volver
-      </a>
+  <!-- CONTENIDO -->
+  <div class="container mt-4">
+    <h2>Tu carrito</h2>
+    <div id="cart-items" class="row g-3 mt-3"></div>
+    <div class="mt-4">
+      <h4>Total: $<span id="cart-total">0.00</span></h4>
     </div>
 
-    <!-- CENTRO: Logo + Marca -->
-    <div class="d-flex align-items-center text-center">
-      <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="me-2">
-      <span class="navbar-brand mb-0 h1">ESMIRLO FC</span>
+    <div id="carrito-compra" class="mt-4 d-none">
+      <h4>Datos de envío</h4>
+      <div class="mb-3">
+        <label class="form-label">Correo electrónico:</label>
+        <input type="email" id="email" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Método de entrega:</label>
+        <select class="form-select" id="metodo-envio">
+          <option>Retiro en tienda</option>
+          <option>Envío a domicilio</option>
+        </select>
+      </div>
+      <div id="campo-codigo-postal" class="mb-3 d-none">
+        <label class="form-label">Código Postal:</label>
+        <input type="text" id="codigo-postal" class="form-control">
+      </div>
+      <div id="campo-direccion" class="mb-3 d-none">
+        <label class="form-label">Dirección:</label>
+        <input type="text" id="direccion" class="form-control">
+      </div>
+      <div id="campo-provincia" class="mb-3 d-none">
+        <label class="form-label">Provincia:</label>
+        <input type="text" id="provincia" class="form-control">
+      </div>
+
+      <div class="mb-3">
+        <p id="costo-envio">Costo de envío: $0.00</p>
+        <p id="total-final">Total final: $0.00</p>
+      </div>
+
+      <button class="btn btn-primary" id="confirmar-compra">Confirmar compra</button>
     </div>
 
-    <!-- DERECHA: Carrito + Ubicación -->
-    <div class="d-flex align-items-center">
-      <a class="nav-link me-3 position-relative text-dark" href="carrito.html">
-        <i class="bi bi-cart fs-5"></i>
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" id="cart-count">
-          0
-        </span>
-      </a>
-      <a class="nav-link text-dark fs-5" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">
-        📍
-      </a>
+    <div id="resumen-compra" class="mt-4 d-none">
+      <h4>Gracias por tu compra</h4>
+      <p>Tu pedido fue registrado correctamente.</p>
     </div>
-
-  </div>
-</nav>
-
-<!-- CONTENIDO -->
-<div class="container mt-4">
-  <h2>Tu carrito</h2>
-  <div id="cart-items" class="row g-3 mt-3"></div>
-  <div class="mt-4">
-    <h4>Total: $<span id="cart-total">0.00</span></h4>
-  </div>
-
-  <div id="carrito-compra" class="mt-4 d-none">
-    <h4>Datos de envío</h4>
-    <div class="mb-3">
-      <label class="form-label">Correo electrónico:</label>
-      <input type="email" id="email" class="form-control" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Método de entrega:</label>
-      <select class="form-select" id="metodo-envio">
-        <option>Retiro en tienda</option>
-        <option>Envío a domicilio</option>
-      </select>
-    </div>
-    <div id="campo-codigo-postal" class="mb-3 d-none">
-      <label class="form-label">Código Postal:</label>
-      <input type="text" id="codigo-postal" class="form-control">
-    </div>
-    <div id="campo-direccion" class="mb-3 d-none">
-      <label class="form-label">Dirección:</label>
-      <input type="text" id="direccion" class="form-control">
-    </div>
-    <div id="campo-provincia" class="mb-3 d-none">
-      <label class="form-label">Provincia:</label>
-      <input type="text" id="provincia" class="form-control">
-    </div>
-
-    <div class="mb-3">
-      <p id="costo-envio">Costo de envío: $0.00</p>
-      <p id="total-final">Total final: $0.00</p>
-    </div>
-
-    <button class="btn btn-primary" id="confirmar-compra">Confirmar compra</button>
   </div>
 
-  <div id="resumen-compra" class="mt-4 d-none">
-    <h4>Gracias por tu compra</h4>
-    <p>Tu pedido fue registrado correctamente.</p>
-  </div>
-</div>
-
-<script src="../js/carrito.js"></script>
+  <script src="../js/carrito.js"></script>
 </body>
 </html>
-
