--- a/frontend/pages/carrito.html
+++ b/frontend/pages/carrito.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrito</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/principal.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid d-flex justify-content-between align-items-center">
@@ -18,7 +20,8 @@
         </a>
       </div>
       <div class="d-flex align-items-center text-center">
-        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="me-2">
+        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30"
+          class="me-2">
         <span class="navbar-brand mb-0 h1">ESMIRLO FC</span>
       </div>
       <div class="d-flex align-items-center">
@@ -28,11 +31,12 @@
             0
           </span>
         </a>
-        <a class="nav-link text-dark fs-5" href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">
+        <a class="nav-link text-dark fs-5"
+          href="https://www.google.com.ar/maps/place/Av.+V%C3%A9lez+Sarsfield+1234,+X5000+C%C3%B3rdoba" target="_blank">
           📍
         </a>
       </div>
-      
+
     </div>
   </nav>
 
@@ -78,8 +82,7 @@
       <p>Tu pedido fue registrado correctamente.</p>
     </div>
 
-    <!-- Lista de pedidos del usuario -->
-    <div id="lista-pedidos" class="mt-5">
+    <div id="lista-pedidos" class="mt-5" style="max-height: 550px; overflow-y: auto;">
       <h3>Mis pedidos</h3>
       <div id="orders-list" class="mt-3"></div>
     </div>
@@ -87,4 +90,5 @@
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/carrito.js"></script>
 </body>
+
 </html>
