--- a/frontend/pages/detalle-producto.html
+++ b/frontend/pages/detalle-producto.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ESMIRLO FC - Tienda</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
+    crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/categoria.css" />
-  <title>Esmirlo</title>
+
+  <link rel="stylesheet" href="../css/principal.css" />
 </head>
 
 <body>
@@ -40,6 +42,8 @@
 
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="administrador.html" id="admin-panel">Panel administrador</a></li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
             <ul class="dropdown-menu" id="categorias-dropdown"></ul>
@@ -51,20 +55,15 @@
       </div>
     </div>
   </nav>
-
-  <div class="container py-5">
-    <h2 id="titulo-categoria" class="mb-4 text-center">Productos</h2>
-    <div id="productos-contenedor" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
-    </div>
+  <div class="p-4">
+    <div class="container" id="detalle-producto"></div>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-  |
-  <script type="module" src="../utils/sessions.js"></script>
-  <script type="module" src="../utils/products.js"></script>
-  <script type="module" src="../js/categoria.js"></script>
+  
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+<script type="module" src="../js/detalleProducto.js"></script>
+<script type="module" src="../utils/sessions.js"></script>
 
+</body>
 </html>
