--- a/frontend/pages/gestion-pedidos.html
+++ b/frontend/pages/gestion-pedidos.html
@@ -37,11 +37,10 @@
   <div class="container py-5">
     <h2>Historial de Pedidos</h2>
     <div id="lista-pedidos" class="mt-5">
-
-      <div id="orders-list" class="mt-3"></div>
+      <div id="orders-list" class="mt-3" style="max-height: 650px; overflow-y: auto;"></div>
     </div>
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/gestionPedidos.js"></script>
