--- a/frontend/pages/gestion-productos.html
+++ b/frontend/pages/gestion-productos.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="principal.html">
@@ -35,28 +34,26 @@
       </div>
     </div>
   </nav>
-
-  <!-- Contenido principal -->
   <div class="container py-5">
     <h2 class="text-center mb-4">Gestión de productos</h2>
-    <div class="text-end mb-3">
+    <div class="text-start mb-3">
       <a href="productos.html" class="btn btn-success">
         <i class="bi bi-plus-circle"></i> Crear nuevo producto
       </a>
     </div>
-    <!-- Contenedor para las tarjetas de productos -->
     <div class="container mt-5">
       <h3 class="text-center mb-3">Lista de Productos</h3>
-      <table class="table table-bordered">
-        <tbody id="productos-container"></tbody>
-      </table>
 
+      <div style="max-height: 550px; overflow-y: auto;">
+        <table class="table table-bordered mb-0">
+          <tbody id="productos-container"></tbody>
+        </table>
+      </div>
     </div>
+
+
   </div>
-
-  <!-- Scripts -->
   <script type="module" src="../js/gestionProductos.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="../utils/sessions.js"></script>
 </body>
