--- a/frontend/pages/gestion-usuarios.html
+++ b/frontend/pages/gestion-usuarios.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Panel de Administración - ESMIRLO FC</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="../css/principal.css">
-  
- 
-</head>
-<body>
 
-  <!-- Barra de navegación -->
+
+</head>
+
+<body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="principal.html">
-        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+        <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30"
+          class="d-inline-block align-text-top">
         ESMIRLO FC - Admin
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar"
+        aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="adminNavbar">
@@ -34,7 +37,6 @@
     </div>
   </nav>
 
-  <!-- Contenido principal -->
   <div class="container my-5">
     <h2 class="text-center mb-4">Usuarios</h2>
     <div class="table-responsive">
@@ -50,13 +52,14 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Se llenará dinámicamente -->
         </tbody>
       </table>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module" src="../js/gestionUsuarios.js"></script>
   <script type="module" src="../utils/sessions.js"></script>
 </body>
+
 </html>
