--- a/frontend/pages/ofertas.html
+++ b/frontend/pages/ofertas.html
@@ -12,16 +12,14 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <!-- IZQUIERDA: Logo + Marca -->
+
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="../imagenes/427189999_950988366646197_7228972704184196983_n.jpg" alt="Logo" width="30" height="30"
           class="d-inline-block align-text-top me-2">
         ESMIRLO FC
       </a>
 
-
-      <!-- IZQUIERDA: Instagram + Carrito + Dirección -->
-      <div class="d-flex align-items-center ms-auto"> <!-- ms-auto para alinear a la derecha -->
+      <div class="d-flex align-items-center ms-auto">
         <a class="nav-link me-3" href="https://www.instagram.com/esmirlofc/?hl=es" target="_blank">
           <i class="bi bi-instagram fs-5"></i>
         </a>
@@ -38,13 +36,11 @@
         </a>
       </div>
 
-      <!-- Botón navegador para móviles -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- CENTRO: Menú de navegación -->
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
           <li class="nav-item dropdown">
@@ -62,13 +58,11 @@
     </div>
   </nav>
 
-  <!-- Ofertas -->
   <div class="container py-5">
     <h2 class="text-center mb-4">🔥 Ofertas de la Semana</h2>
     <p class="text-center mb-5">¡Aprovechá estos descuentos antes de que se agoten!</p>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
-      <!-- Producto 1 -->
       <div class="col">
         <div class="card h-100 border-danger">
           <img src="../imagenes/A_red_and_white_polo_shirt_with_the_word_Esmirlo_on_it__.png" class="card-img-top"
@@ -81,7 +75,6 @@
         </div>
       </div>
 
-      <!-- Producto 2 -->
       <div class="col">
         <div class="card h-100 border-danger">
           <img src="../imagenes/A_baseball_cap_with_the_Esmirlo_F_C_logo_on_the_front__.png" class="card-img-top"
@@ -94,7 +87,6 @@
         </div>
       </div>
 
-      <!-- Producto 3 -->
       <div class="col">
         <div class="card h-100 border-danger">
           <img
@@ -110,13 +102,12 @@
     </div>
   </div>
 
-  <!-- Botón volver -->
   <div class="text-center mt-5 mb-4">
     <a href="principal.html" class="btn btn-primary">Volver al inicio</a>
   </div>
 
   <script type="module" src="../utils/sessions.js"></script>
-  <script type= "module"src="../js/principal.js"></script>
+  <script type="module" src="../js/principal.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
