--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -6,18 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ESMIRLO FC - Tienda</title>
 
-  <!-- Bootstrap CSS + Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-  <!-- CSS personalizado -->
   <link rel="stylesheet" href="../css/principal.css" />
 </head>
 
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="principal.html">
@@ -46,7 +43,8 @@
 
       <div class="collapse navbar-collapse" id="navbarContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="administrador.html" id="admin-panel">Panel administrador</a></li>
+          <li class="nav-item"><a class="nav-link" href="administrador.html" id="admin-panel">Panel administrador</a>
+          </li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Categorías</a>
@@ -60,7 +58,6 @@
     </div>
   </nav>
 
-  <!-- Carrusel -->
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></button>
@@ -90,19 +87,17 @@
     </button>
   </div>
 
-  <!-- Sección de productos -->
   <div class="container py-5">
     <h2 class="mb-4 text-center">Nuestros Productos</h2>
     <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
-      <!-- Los productos se cargarán dinámicamente aquí -->
     </div>
   </div>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
   <script type="module" src="../utils/sessions.js"></script>
   <script type="module" src="../js/principal.js"></script>
+  <script type="module" src="../utils/products.js"></script>
 
 </body>
 
