--- a/frontend/pages/productos.html
+++ b/frontend/pages/productos.html
@@ -11,7 +11,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin - Productos</a>
+      <a class="navbar-brand" href="principal.html">Admin - Productos</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
