--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -88,10 +88,12 @@
   </div>
 
   <div class="container py-5">
-    <h2 class="mb-4 text-center">Nuestros Productos</h2>
-    <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
-    </div>
+  <h2 class="mb-4 text-center">Nuestros Productos</h2>
+  <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
   </div>
+  <div class="d-flex justify-content-center mt-4" id="pagination"></div>
+</div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
