--- a/frontend/pages/categoria.html
+++ b/frontend/pages/categoria.html
@@ -56,8 +56,13 @@
     <h2 id="titulo-categoria" class="mb-4 text-center">Productos</h2>
     <div id="productos-contenedor" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
     </div>
+    <div id="paginacion" class="d-flex justify-content-between align-items-center mt-3">
+      <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+      <span id="paginaActual">Página 1</span>
+      <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
+    </div>
   </div>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
