--- a/frontend/pages/gestion-pedidos.html
+++ b/frontend/pages/gestion-pedidos.html
@@ -2,8 +2,8 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Historial de Pedidos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
@@ -28,28 +28,48 @@
             <a class="nav-link active" href="../pages/administrador.html">Panel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onClick="logout()">Cerrar sesión</a>
+            <a class="nav-link" href="#" onclick="logout()">Cerrar sesión</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container py-5">
+  <main class="container py-5">
     <h2>Historial de Pedidos</h2>
 
-    <!-- Filtro por fecha -->
     <div class="row mb-3">
+
+      <div class="col-md-4">
+        <label for="filtro-usuario" class="form-label">Filtrar por usuario:</label>
+        <input type="text" id="filtro-usuario" class="form-control" placeholder="Nombre de usuario" />
+      </div>
       <div class="col-md-4">
         <label for="filtro-fecha" class="form-label">Filtrar por fecha:</label>
-        <input type="date" class="form-control" id="filtro-fecha">
+        <input type="date" id="filtro-fecha" class="form-control" />
       </div>
+      <div class="col-md-4">
+        <label for="filtro-estado" class="form-label">Filtrar por estado:</label>
+        <select id="filtro-estado" class="form-select">
+          <option value="">Todos</option>
+          <option value="pending">Pendiente</option>
+          <option value="paid">Pago realizado</option>
+          <option value="shipped">Enviado</option>
+          <option value="completed">Entregado</option>
+          <option value="cancelled">Cancelado</option>
+        </select>
+      </div>
+
     </div>
 
-    <div id="lista-pedidos" class="mt-3">
-      <div id="orders-list" style="max-height: 650px; overflow-y: auto;"></div>
+    <section id="orders-list" style="max-height: 650px; overflow-y: auto;"></section>
+    <div id="paginacion" class="d-flex justify-content-between align-items-center mt-3">
+      <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+      <span id="paginaActual">Página 1</span>
+      <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
     </div>
-  </div>
+
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="../utils/sessions.js"></script>
