--- a/frontend/pages/gestion-productos.html
+++ b/frontend/pages/gestion-productos.html
@@ -41,6 +41,21 @@
         <i class="bi bi-plus-circle"></i> Crear nuevo producto
       </a>
     </div>
+    <div class="row mb-3">
+
+      <div class="col-md-4">
+        <label for="filtro-nombre" class="form-label">Filtrar por usuario:</label>
+        <input type="text" id="filtro-nombre" class="form-control" placeholder="Nombre de producto" />
+      </div>
+    
+      <div class="col-md-4">
+        <label for="filtro-categoria" class="form-label">Filtrar por categoria:</label>
+        <select id="filtro-categoria" class="form-select">
+          
+        </select>
+      </div>
+
+    </div>
     <div class="container mt-5">
       <h3 class="text-center mb-3">Lista de Productos</h3>
 
@@ -50,7 +65,11 @@
         </table>
       </div>
     </div>
-
+    <div id="paginacion" class="d-flex justify-content-between align-items-center mt-3">
+      <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+      <span id="paginaActual">Página 1</span>
+      <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
+    </div>
 
   </div>
   <script type="module" src="../js/gestionProductos.js"></script>
