--- a/frontend/pages/gestion-usuarios.html
+++ b/frontend/pages/gestion-usuarios.html
@@ -39,6 +39,29 @@
 
   <div class="container my-5">
     <h2 class="text-center mb-4">Usuarios</h2>
+    <div class="row mb-4">
+      <div class="col-md-4">
+        <label for="filtro-nombre" class="form-label">Filtrar por nombre:</label>
+        <input type="text" id="filtro-nombre" class="form-control" placeholder="Nombre" />
+      </div>
+      <div class="col-md-4">
+        <label for="filtro-apellido" class="form-label">Filtrar por apellido:</label>
+        <input type="text" id="filtro-apellido" class="form-control" placeholder="Apellido" />
+      </div>
+      <div class="col-md-4">
+        <label for="filtro-username" class="form-label">Filtrar por username:</label>
+        <input type="text" id="filtro-username" class="form-control" placeholder="Nombre de usuario" />
+      </div>
+      <div class="col-md-4">
+        <label for="filtro-rol" class="form-label">Filtrar por rol:</label>
+        <select id="filtro-rol" class="form-select">
+          <option value="">Todos</option>
+          <option value="customer">Cliente</option>
+          <option value="admin">administrador</option>
+        </select>
+      </div>
+    </div>
+
     <div class="table-responsive">
       <table class="table table-bordered" id="usersTable">
         <thead class="table-dark">
@@ -54,6 +77,11 @@
         <tbody>
         </tbody>
       </table>
+    </div>
+    <div id="paginacion" class="d-flex justify-content-between align-items-center mt-3">
+      <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+      <span id="paginaActual">Página 1</span>
+      <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
