--- a/frontend/pages/principal.html
+++ b/frontend/pages/principal.html
@@ -91,7 +91,12 @@
   <h2 class="mb-4 text-center">Nuestros Productos</h2>
   <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4" id="productos-container">
   </div>
-  <div class="d-flex justify-content-center mt-4" id="pagination"></div>
+  <div class="d-flex justify-content-between align-items-center mt-3">
+  <button id="btnAnterior" class="btn btn-outline-secondary btn-sm">Anterior</button>
+  <span id="paginaActual">Página 1</span>
+  <button id="btnSiguiente" class="btn btn-outline-secondary btn-sm">Siguiente</button>
+</div>
+
 </div>
 
 
